# Aeons

./: .env  .gitignore  LICENSE  README.md  next.config.js  package-lock.json  package.json  server.ts
components/Ancestors/: index.jsx  style.module.css
components/Button/: index.jsx  style.module.css
components/ContextMenu/: index.jsx  style.module.css
contexts/: AppContext.jsx  BundlrContext.jsx
contracts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
contracts/client-contract/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
contracts/client-contract/cache/warp/contracts/: LOG
contracts/client-contract/cache/warp/state/: LOG
contracts/client-contract/data/: initialState.json
contracts/client-contract/scripts/: contract.test.ts
contracts/client-contract/scripts/deployment/: deploy.ts
contracts/client-contract/src/: actions.rs  lib.rs  types.rs
contracts/client-contract/src/actions/: evolve.rs  insert.rs  relocate.rs  rename.rs  set_internal_owner.rs
contracts/client-contract/src/types/: contract.rs  file_hierarchy.rs
lib/: BundlrClient.js  BundlrClient.ts  BundlrFileSystem.js  ContractState.js  ContractState.ts  Crypto.ts  FileHierarchy.js  PendingTransactions.js  Transaction.js  UserContract.js  UserContract.ts  Utility.js  Utility.ts  Vector2.js  Vector2.ts
pages/: _app.js  _app.jsx  _document.jsx  index.js  settings.jsx  user.jsx
public/: contract.js  manifest.json  sw.js.map
stores/: AppStore.js  AppStore.ts  BundlrStore.js  DriveStore.js  DriveStore.ts
styles/: globals.css
(+117 files in other folders)
