[package]
name = "aeons-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3.61"
schemars = "0.8.12"
serde = { version = "1.0.158", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.94"
warp-contracts = "0.1.2"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
